TUC-129 Corrected a makefile

--- a/src/tucuquery/makefile
+++ b/src/tucuquery/makefile
@@ -14,6 +14,7 @@ SOURCES := \
            computingquery.cpp \
            computingqueryresponse.cpp \
            computingqueryresponsexmlexport.cpp \
+           computingresponseexport.cpp \
            parametersdata.cpp \
            querycomputer.cpp \
            querydata.cpp \
