TUC-129 FullSample, virtual xml exporter methods, target event getters

--- a/src/tucuquery/makefile
+++ b/src/tucuquery/makefile
@@ -15,6 +15,7 @@ SOURCES := \
            computingqueryresponse.cpp \
            computingqueryresponsexmlexport.cpp \
            computingresponseexport.cpp \
+           fullsample.cpp
            parametersdata.cpp \
            querycomputer.cpp \
            querydata.cpp \
