TUC-129 Added a file in a makefile

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -83,6 +83,7 @@ SOURCES := \
            pkmodels/rkmichaelismentenenzyme.cpp \
            pkmodels/rkmichaelismentenonecomp.cpp \
            pkmodels/rkmichaelismententwocomp.cpp \
+           pkmodels/rkmichaelismententwocompvmaxamount.cpp \
            pkmodels/rkonecompartmentextra.cpp \
            pkmodels/rkonecompartmentgammaextra.cpp \
            pkmodels/rktwocompartmenterlang.cpp \
