--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -98,7 +98,7 @@ SOURCES := \
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/boost-1.63.0 \
-            ../../libs/date-master-20170711 \
+            ../../libs/date/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/rapidjson-master-20190220/include \
             ../../libs/tiny-js-master-20170629 \
