--- a/src/tucucli/makefile
+++ b/src/tucucli/makefile
@@ -14,7 +14,7 @@ SOURCES := tucucli.cpp \
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/spdlog-master-20170622/include \
-            ../../libs/date-master-20170711 \
+            ../../libs/date/include \
 			../../libs/cxxopts
 
 LIBS := tucuquery tucucommon tucucore botan
