--- a/src/tuculicense/makefile
+++ b/src/tuculicense/makefile
@@ -11,7 +11,7 @@ TYPE := APP
 SOURCES := main.cpp
 
 INCLUDES := ../../libs/spdlog-master-20170622/include \
-            ../../libs/date-master-20170711 \
+            ../../libs/date/include \
             ../../libs/botan-2.1.0/build/include
 
 LIBS := tucucommon botan
