--- a/src/tucuquery/makefile
+++ b/src/tucuquery/makefile
@@ -27,7 +27,7 @@ SOURCES := \
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/boost-1.63.0 \
-            ../../libs/date-master-20170711 \
+            ../../libs/date/include \
             ../../libs/spdlog-master-20170622/include
 LIBS :=
 EXTLIBS :=
