--- a/src/tucuvalidator/makefile
+++ b/src/tucuvalidator/makefile
@@ -13,7 +13,7 @@ SOURCES := tucuvalidator.cpp
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/spdlog-master-20170622/include \
-            ../../libs/date-master-20170711 \
+            ../../libs/date/include \
 			../../libs/cxxopts
 
 LIBS := tucuquery tucucommon tucucore botan
