Changes in makefile to respect what the current lib folder name are

--- a/test/tucucore/makefile
+++ b/test/tucucore/makefile
@@ -12,8 +12,8 @@ SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/eigen-3.3.2 \
-            ../../libs/boost-1.63.0 \
-            ../../libs/date-master-20170711
+            ../../libs/boost-1.83.0 \
+            ../../libs/date/include
             
 LIBS := tucucommon tucucore botan
 EXTLIBS := 
