--- a/test/tuculicense/makefile
+++ b/test/tuculicense/makefile
@@ -11,8 +11,8 @@ TYPE := TEST
 SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include \
-            ../../libs/date-master-20170711 \
-            ../../libs/botan-2.1.0/build/include
+            ../../libs/date/include \
+            ../../libs/botan-2.19.3/build/include
 
 LIBS := tucucommon tuculicense botan
 EXTLIBS := 
