--- a/test/tuculicense/makefile
+++ b/test/tuculicense/makefile
@@ -9,7 +9,7 @@ NAME := tuculicense
 TYPE := TEST
 
 SOURCES := tests.cpp
-INCLUDES := ../../libs/fructose-1.3/fructose/include \
+INCLUDES := ../../libs/fructose/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/date/include \
             ../../libs/botan-2.19.3/build/include
