--- a/test/tucuquery/makefile
+++ b/test/tucuquery/makefile
@@ -9,7 +9,7 @@ NAME := tucucommon
 TYPE := TEST
 
 SOURCES := tests.cpp
-INCLUDES := ../../libs/fructose-1.3/fructose/include \
+INCLUDES := ../../libs/fructose/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/date/include \
             ../../libs/rapidxml-1.13 \
