--- a/test/tucucrypto/makefile
+++ b/test/tucucrypto/makefile
@@ -12,7 +12,7 @@ SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/date/include \
-            ../../libs/rapidxml-1.13 \
+            ../../libs/rapidxml \
             ../../libs/eigen-3.3.2 \
             ../../libs/botan-2.19.3/build/include
 
