Resolve "update lib tinyjs"

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -25,7 +25,7 @@ SOURCES := componentmanager.cpp \
 
 INCLUDES := ../../libs/spdlog/include \
             ../../libs/eigen-3.3.2 \
-            ../../libs/tiny-js-master-20170629 \
+            ../../libs/tiny-js \
             ../../libs/date/include \
             ../../libs/rapidxml \
             ../../libs/botan-2.19.3/build/include
