--- a/src/tucucrypto/CMakeLists.txt
+++ b/src/tucucrypto/CMakeLists.txt
@@ -7,22 +7,24 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../)
 
-include_directories(${CMAKE_CURRENT_LIST_DIR}/../../libs/spdlog/include)
-include_directories(${CMAKE_CURRENT_LIST_DIR}/../../libs/date/include)
-include_directories(${CMAKE_CURRENT_LIST_DIR}/../../libs/eigen)
-include_directories(${CMAKE_CURRENT_LIST_DIR}/../../libs/botan/build/include)
+include(${CMAKE_CURRENT_LIST_DIR}/../../libs/tucuxi-core_libs)
+
+include(${CMAKE_CURRENT_LIST_DIR}/../../libs/botan/tucuxi-core_add_botan)
 
 ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_UNICODE)
 
-file(GLOB TUCUCORE_HEADERS_FILES
+file(GLOB TUCUCRYPTO_HEADERS_FILES
     ${CMAKE_CURRENT_LIST_DIR}/cryptohelper.h
     ${CMAKE_CURRENT_LIST_DIR}/licensemanager.h
     ${CMAKE_CURRENT_LIST_DIR}/systeminfo.h)
 
-file(GLOB TUCUCORE_SOURCE_FILES    
+file(GLOB TUCUCRYPTO_SOURCE_FILES    
     ${CMAKE_CURRENT_LIST_DIR}/cryptohelper.cpp
     ${CMAKE_CURRENT_LIST_DIR}/licensemanager.cpp
     ${CMAKE_CURRENT_LIST_DIR}/systeminfo.cpp)
 
-add_library(tucucrypto STATIC ${TUCUCORE_SOURCE_FILES} ${TUCUCORE_HEADERS_FILES})
+add_library(tucucrypto_base STATIC ${TUCUCRYPTO_SOURCE_FILES} ${TUCUCRYPTO_HEADERS_FILES})
+
+add_library(tucucrypto INTERFACE)
+target_link_libraries(tucucrypto INTERFACE tucucrypto_base botan)
