--- a/src/tucucore/CMakeLists.txt
+++ b/src/tucucore/CMakeLists.txt
@@ -98,6 +98,7 @@ file(GLOB TUCUCORE_HEADERS_FILES
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentinfusion.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenenzyme.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecomp.h
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecompvmaxamount.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismententwocomp.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismententwocompvmaxamount.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkonecompartmentextra.h
@@ -191,6 +192,7 @@ file(GLOB TUCUCORE_SOURCE_FILES
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentinfusion.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenenzyme.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecomp.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecompvmaxamount.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismententwocomp.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismententwocompvmaxamount.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkonecompartmentextra.cpp
