--- a/src/tucucore/CMakeLists.txt
+++ b/src/tucucore/CMakeLists.txt
@@ -99,6 +99,8 @@ file(GLOB TUCUCORE_HEADERS_FILES
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenenzyme.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecomp.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecompvmaxamount.h
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlineartwocomp.h
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlineartwocompvmaxamount.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecomp.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecompvmaxamount.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismententwocomp.h
@@ -195,6 +197,8 @@ file(GLOB TUCUCORE_SOURCE_FILES
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenenzyme.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecomp.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecompvmaxamount.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlineartwocomp.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlineartwocompvmaxamount.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecomp.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenonecompvmaxamount.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismententwocomp.cpp
