Adding some tests for computingadjustments

--- a/test/tucucore/CMakeLists.txt
+++ b/test/tucucore/CMakeLists.txt
@@ -49,6 +49,7 @@ file(GLOB TUCUTESTCORE_SOURCE_FILES
     ${CMAKE_CURRENT_LIST_DIR}/gtest_core.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gtest_cachecomputing.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gtest_computingcomponentadjustments.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gtest_computingcomponentadjustments2.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gtest_computingcomponentattimes.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gtest_computingcomponentconcentration.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gtest_computingcomponentpercentiles.cpp
