--- a/src/tucucore/CMakeLists.txt
+++ b/src/tucucore/CMakeLists.txt
@@ -96,6 +96,7 @@ file(GLOB TUCUCORE_HEADERS_FILES
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentextra.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentextralag.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentinfusion.h
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenaiemax.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenenzyme.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecomp.h
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecompvmaxamount.h
@@ -130,7 +131,7 @@ file(GLOB TUCUCORE_HEADERS_FILES
     ${CMAKE_CURRENT_LIST_DIR}/validvalues.h
     ${CMAKE_CURRENT_LIST_DIR}/version.h)
 
-file(GLOB TUCUCORE_SOURCE_FILES    
+file(GLOB TUCUCORE_SOURCE_FILES
     ${CMAKE_CURRENT_LIST_DIR}/aposteriorietascalculator.cpp
     ${CMAKE_CURRENT_LIST_DIR}/cachecomputing.cpp
     ${CMAKE_CURRENT_LIST_DIR}/cachedexponentials.cpp
@@ -195,6 +196,7 @@ file(GLOB TUCUCORE_SOURCE_FILES
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentextra.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentextralag.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/onecompartmentinfusion.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenaiemax.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenenzyme.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecomp.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/rkmichaelismentenlinearonecompvmaxamount.cpp
