--- a/test/tucucore/CMakeLists.txt
+++ b/test/tucucore/CMakeLists.txt
@@ -101,6 +101,7 @@ file(GLOB TUCUTESTCORE_SOURCE_FILES
     ${CMAKE_CURRENT_LIST_DIR}/gtest_sampleextractor.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gtest_targetevaluator.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gtest_targetextractor.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gtest_tdacalculator.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/gtest_rkmichaelismentenenzyme.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/gtest_rkmichaelismententwocompvmaxamount.cpp
     ${CMAKE_CURRENT_LIST_DIR}/pkmodels/gtest_twocompartmentextralag.cpp
