Adding TUCU_TIME_DEBUG in tucucore and tucucommon

--- a/src/tucucore/CMakeLists.txt
+++ b/src/tucucore/CMakeLists.txt
@@ -57,6 +57,11 @@ if (TUCU_CONFIG_OPENMP)
     add_compile_definitions(TUCU_CONFIG_OPENMP)
 endif()
 
+option(TUCU_TIME_DEBUG "Compiles with DateTime object embedding a string representation, to ease debugging")
+if (TUCU_TIME_DEBUG)
+    add_compile_definitions(TUCU_TIME_DEBUG)
+endif()
+
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../)
 
 include(${CMAKE_CURRENT_LIST_DIR}/../../libs/tucuxi-core_libs)
