--- a/src/tucucommon/CMakeLists.txt
+++ b/src/tucucommon/CMakeLists.txt
@@ -5,6 +5,12 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+
+option(TUCU_TIME_DEBUG "Compiles with DateTime object embedding a string representation, to ease debugging")
+if (TUCU_TIME_DEBUG)
+    add_compile_definitions(TUCU_TIME_DEBUG)
+endif()
+
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../)
 
 include(${CMAKE_CURRENT_LIST_DIR}/../../libs/tucuxi-core_libs)
